--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -144,3 +144,139 @@
     background-repeat: no-repeat;
     margin: auto;
 }
+
+.show-bottom-half {
+    background-color: #FEFFFE;
+    width: 100%;
+    height: 100%;
+}
+
+.info-div {
+    width: 850px;
+    height: 90px;
+    display: flex;
+    border-right: 1px solid #F1F2F1;
+    margin-top: 20px;
+    padding: 0 19px 0 12px;
+}
+
+.comment-and-buttons {
+    margin: auto;
+    width: 820px;
+    height: 90px;
+    display: flex;
+    flex-direction: column;
+}
+
+.comment {
+    width: 817px;
+    height: 28px;
+    display: flex;
+    flex-direction: row;
+    background-color: #F2F2F2;
+    border: 1px solid #E5E5E5;
+    padding: 5px 5px 5px 0;
+    align-items: center;
+}
+
+.comment-form {
+    font-family: 'interstateextralight';
+    font-weight: 600;
+    font-size: 14px;
+    background-color: #FEFFFE;
+    padding: 0 9px;
+    width: 745px;
+    height: 25px;
+    border: 1px solid #E5E5E5;
+    border-radius: 4px;
+    outline: 0;
+    color: #989998;
+}
+
+.commenter-pic {
+    background-image: image_url("sample-profile-pic.jpg");
+    width: 40px;
+    height: 40px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.buttons {
+    margin-top: 10px;
+    width: 817px;
+    height: 33px;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #F1F2F1;
+}
+
+.show-buttons {
+    display: flex;
+    flex-direction: row;
+    margin-right: 5px;
+    width: max-content;
+    background-color: transparent;
+    font-family: 'interstateextralight';
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    border: 1px solid #e5e5e5;
+    border-radius: 3px;
+    padding: 2px 11px 2px 10px;
+    height: 26px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.show-buttons:hover {
+    border: 1px solid #CBCCCB;
+}
+
+.like-b::before {
+    content: "";
+    display: flex;
+    background-image: image_url("heart.svg");
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 20px;
+    width: 20px;
+    margin: auto 3px auto -5px;
+}
+
+.repost-b::before {
+    content: "";
+    display: flex;
+    background-image: image_url("repost.svg");
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 20px;
+    width: 20px;
+    margin: auto 3px auto -5px;
+}
+
+.share-b::before {
+    content: "";
+    display: flex;
+    background-image: image_url("share.svg");
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 20px;
+    width: 20px;
+    margin: auto 3px auto -5px;
+}
+
+.more-b::before {
+    content: "";
+    display: flex;
+    background-image: image_url("more.svg");
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 20px;
+    width: 20px;
+    margin: auto 3px auto -5px;
+}
