--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -280,3 +280,125 @@
     width: 20px;
     margin: auto 3px auto -5px;
 }
+
+.profile-and-description {
+    display: flex;
+    flex-direction: row;
+    height: 250px;
+    width: 857px;
+    margin: 20px 20px 0 25px;
+}
+
+.profile-div {
+    display: flex;
+    flex-direction: column;
+}
+.show-profile-pic {
+    background-image: image_url("sample-profile-pic.jpg");
+    background-position: center;
+    background-size: 120px 120px;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+}
+
+.show-username {
+    font-family: 'interstateextralight';
+    font-weight: 600;
+    font-size: 14px;
+    width: max-content;
+    text-align: left;
+    margin-top: 5px;
+    margin-bottom: 7px;
+    line-height: 1.3;
+}
+
+.followers-and-tracks {
+    width: 120px;
+    height: 22px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.show-follower-count {
+    font-family: 'interstateextralight';
+    font-weight: 600;
+    font-size: 12px;
+    width: 42px;
+    height: 22px;
+    margin: 0;
+    color: #9A9B9A;
+    text-align: left;
+}
+
+.show-follower-count::before {
+    content: "";
+    display: inline-block;
+    background-image: image_url("followers.svg");
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-width: 16px;
+    min-height: 12px;
+    margin: 0 4px -2px 0; 
+}
+
+.show-tracks-count {
+    font-family: 'interstateextralight';
+    font-weight: 600;
+    font-size: 12px;
+    width: 42px;
+    height: 22px;
+    margin: 0 0 0 -2px;
+    color: #9A9B9A;
+    text-align: left;
+}
+
+.show-tracks-count::before {
+    content: "";
+    display: inline-block;
+    background-image: image_url("tracks.svg");
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-width: 16px;
+    min-height: 12px;
+    margin: 0 3px -2px 0;
+}
+
+.show-follow-button {
+    width: 52px;
+    height: 22px;
+    background-color: #f50;
+    font-family: 'interstateextralight';
+    font-weight: 600;
+    font-size: 11px;
+    border-radius: 3px;
+    color: #fff;
+    padding: 2px 9px 2px 8px;
+    line-height: 16px;
+    cursor: pointer;
+    outline: 0;
+    border: 1px solid #e5e5e5;
+    margin-top: 2px;
+}
+
+.description-div {
+    width: 706px;
+    height: 300px;
+    border-right: 1px solid #F1F2F1;
+    margin-left: 30px;
+    margin-top: -20px;
+    padding-top: 20px;
+    display: flex;
+
+    p {
+        margin: 0;
+        justify-self: left;
+        font-family: 'interstateextralight';
+        font-weight: 600;
+        font-size: 14px;
+        color: #333;
+    }
+}
