Set up ActiveStorage skeleton

--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -147,8 +147,9 @@
 
 .show-bottom-half {
     background-color: #FEFFFE;
-    width: 100%;
+    min-width: 1240px;
     height: 100%;
+    margin: 0 auto;
 }
 
 .info-div {
