Create persistent player

--- a/app/assets/stylesheets/main_header.scss
+++ b/app/assets/stylesheets/main_header.scss
@@ -9,6 +9,10 @@
     align-items: center;
 }
 
+a {
+    text-decoration: none;
+}
+
 .header-content {
     display: flex;
     justify-content: flex-end;
