--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -401,6 +401,8 @@
         font-weight: 600;
         font-size: 14px;
         color: #333;
+        width: 668px;
+        text-align: left;
     }
 }
 
