--- a/app/assets/stylesheets/welcome_page.scss
+++ b/app/assets/stylesheets/welcome_page.scss
@@ -87,88 +87,107 @@
 }
 
 .song-grid {
-    margin: 24px 34px 0 34px;
-    margin-right: 11px;
+    margin: 24px 11px 0 34px;
     height: 453px;
+    width: 1172px;
 }
 
 .grid-ul {
     list-style: none;
     margin: 0;
-    
+    width: 1172px;
+    height: 453px;
 }
 
 .grid-item {
     box-sizing: border-box;
-    padding-right: 23px;
-    width: 16.666%;
+    // padding-right: 23px;
+    width: 195px;
+    height: 226.5px;
     float: left;
-}
-
-.album-art-grid {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    padding-bottom: 100%;
-    margin-bottom: -100%;
-    background-image: image_url('neocolor-hctbw.jpg');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    position: relative;
-    text-decoration: none;
-    display: block;
-    // @include filter-gradient(#ffb76b, #ff7f04, horizontal);
-
-    // background-image: linear-gradient(left top, #ffb76b 0%, #ffa73d 41%, #ffa73d 41%, #ff7c00 78%, #ff7f04 100%);
-
+    display: flex;
+    flex-direction: column;
 }
 
 .grid-link {
     text-decoration: none;
+    width: 172px;
+    height: 172px;
+
+    .album-art-grid {
+        box-sizing: border-box;
+        width: 172px;
+        height: 172px;
+        // padding-bottom: 100%;
+        // margin-bottom: -100%;
+        // background-image: image_url('neocolor-hctbw.jpg');
+        // background-repeat: no-repeat;
+        // background-size: 100%;
+        position: relative;
+        text-decoration: none;
+        display: block;
+        // @include filter-gradient(#ffb76b, #ff7f04, horizontal);
+
+        // background-image: linear-gradient(left top, #ffb76b 0%, #ffa73d 41%, #ffa73d 41%, #ff7c00 78%, #ff7f04 100%);
+
+        .grid-album-art {
+            width: 172px;
+            height: 172px;
+        }
+    }
 }
 
-.grid-song-title {
-    margin-bottom: -10%;
-    margin-top: 3%;
-    float: left;
-    font-family: 'interstateextralight';
-    font-size: 15px;
-    font-weight: 600;
-    color: black; 
-    width: 100%; 
-    height: 100%;  
-    text-align: left;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-}
+.song-link {
+    width: 172px;
+    height: 20px;
 
-.grid-song-div {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    padding: 99% 0 0 0;
-    margin-left: 2px;
-}
+    .grid-song-div {
+        width: 172px;
+        height: 20px;
+        position: relative;
+        margin-top: 2px;
+        margin-left: 2px;
 
-.grid-song-artist {
-    // margin-top: 0px;
-    font-family: 'interstateextralight';
-    font-size: 13px;
-    color: #323332;
-    text-align: left;
-
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+        .grid-song-title {
+            margin: 0;
+            float: left;
+            font-family: 'interstateextralight';
+            font-size: 15px;
+            font-weight: 600;
+            color: black;
+            width: 172px;
+            height: 20px;
+            text-align: left;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+    }
 }
 
 .grid-link-div {
-    display: inline-block;
-    width: 100%;
+    display: flex;
+    width: 172px;
     position: relative;
     margin-left: 2px;
-    margin-top: 0%;
+    margin-top: 2px;
+
+    .grid-link-artist {
+        width: 172px;
+        height: 20px;
+
+        .grid-song-artist {
+            // margin-top: 0px;
+            font-family: 'interstateextralight';
+            font-size: 13px;
+            color: #323332;
+            text-align: left;
+            margin: 0;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+    }
 }
 
 .explore-trending {
