--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -165,7 +165,7 @@
 
 .modal-or-text {
     margin: auto;
-    font-family: 'Lucida Grande';
+    font-family: 'lucida_granderegular';
     font-size: 16px;
     line-height: 1.3;
     // -webkit-animation-name: slideIn;
@@ -229,7 +229,7 @@
     margin-top: 30px;
     p{
         text-align: center;
-        font-family: 'Lucida Grande';
+        font-family: 'lucida_granderegular';
         font-size: 12px;
         margin: auto;
         color: #9FA09F;
