--- a/app/assets/stylesheets/welcome_navbar.scss
+++ b/app/assets/stylesheets/welcome_navbar.scss
@@ -30,7 +30,7 @@
 
 .hp-signup {
     display: flex;
-    font-family: 'Lucida Grande';
+    font-family: 'lucida_granderegular';
     font-size: 14px;
     letter-spacing: 1px;
     font-weight: 400;
