Add seek ability to playback bar

--- a/app/assets/stylesheets/welcome_navbar.scss
+++ b/app/assets/stylesheets/welcome_navbar.scss
@@ -106,6 +106,10 @@
         border: 1px solid #CBCCCB;
         border-style: solid;
         color: white;
+
+        &:hover {
+            border-color: #e5e5e5;
+        }
     }
 
     .create-account {
