--- a/app/assets/stylesheets/welcome_page.scss
+++ b/app/assets/stylesheets/welcome_page.scss
@@ -350,6 +350,7 @@
     font-family: 'interstateextralight';
     font-size: 18px;
     padding: 13px 35px;
+    border: 0;
 }
 
 .sign-in-button {
@@ -379,4 +380,8 @@
     background-color: transparent;
     border: 1px solid #E4E5E4;
     border-radius: 3px;
+
+    &:hover {
+        border-color: #ccc;
+    }
 }
