--- a/app/assets/stylesheets/player.scss
+++ b/app/assets/stylesheets/player.scss
@@ -45,6 +45,12 @@
     height: 48px;
     display: flex;
     align-items: center;
+
+    &:hover {
+        .progress__ball {
+            opacity: 1;
+        }
+    }
 }
 
 .progress {
@@ -65,6 +71,17 @@
     background-color: #f50;
 
     border-radius: 3px;
+}
+
+.progress__ball {
+    height: 8px;
+    width: 8px;
+    background-color: #f50;
+    border-radius: 50%;
+    position: absolute;
+    top: -3.5px;
+    opacity: 0;
+    transition: 0.2s;
 }
 
 .time__passed {
