--- a/app/assets/stylesheets/player.scss
+++ b/app/assets/stylesheets/player.scss
@@ -109,3 +109,124 @@
     font-weight: 600;
     line-height: 46px;
 }
+
+.volume__container {
+    display: flex;
+    width: 20px;
+    height: 48px;
+    margin-left: 42px;
+
+    &:hover {
+        cursor: pointer;
+
+        .volume__wrapper {
+            visibility: visible;
+            opacity: 1;
+        }
+    }
+
+    .volume__icon {
+        margin: auto;
+    }
+}
+
+.volume__wrapper {
+    visibility: hidden;
+    opacity: 0;
+    transform: rotateZ(270deg);
+    position: fixed;
+    width: 118px;
+    height: 28px;
+    bottom: 88px;
+    margin-left: -51px;
+    background-color: #f2f2f2;
+    border: 1px solid #cecece;
+    border-radius: 5px;
+    display: flex;
+    transition: 0.3s;
+
+    input {
+        margin: auto;
+        width: 95px;
+    }
+}
+
+input[type=range] {
+    -webkit-appearance: none;
+    margin: 3px 0;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    background: #ff7113;
+    border-radius: 14.1px;
+    border: 0px solid rgba(0, 1, 1, 0);
+}
+
+input[type=range]::-webkit-slider-thumb {
+    border: 0px solid rgba(0, 0, 0, 0);
+    height: 7px;
+    width: 7px;
+    border-radius: 50px;
+    background: #ff5000;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -3px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ff7113;
+}
+
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    background: #ff7113;
+    border-radius: 14.1px;
+    border: 0px solid rgba(0, 1, 1, 0);
+}
+
+input[type=range]::-moz-range-thumb {
+    border: 0px solid rgba(0, 0, 0, 0);
+    height: 7px;
+    width: 7px;
+    border-radius: 50%;
+    background: #ff5000;
+    cursor: pointer;
+}
+
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 1px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+    background: #ff7113;
+    border: 0px solid #ff5000;
+    border-radius: 28.2px;
+}
+
+input[type=range]::-ms-thumb {
+    border: 0px solid rgba(0, 0, 0, 0);
+    height: 7px;
+    width: 7px;
+    border-radius: 50%;
+    background: #ff8600;
+    cursor: pointer;
+    height: 1px;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+    background: #ff5000;
+}
