--- a/app/assets/stylesheets/player.scss
+++ b/app/assets/stylesheets/player.scss
@@ -149,84 +149,102 @@
         margin: auto;
         width: 95px;
     }
+
+    .volume__filled {
+        min-width: 0px;
+        width: 65%;
+        height: 2px;
+        background-color: #f50;
+        pointer-events: none;
+
+        position: absolute;
+        left: 9px;
+        top: 13px;
+
+        border-radius: 2px;
+    }
 }
 
 input[type=range] {
     -webkit-appearance: none;
-    margin: 3px 0;
-}
-
-input[type=range]:focus {
-    outline: none;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 1px;
-    cursor: pointer;
-    background: #ff7113;
-    border-radius: 14.1px;
-    border: 0px solid rgba(0, 1, 1, 0);
+    width: 85%;
+    background: transparent;
+    outline: 0;
 }
 
 input[type=range]::-webkit-slider-thumb {
-    border: 0px solid rgba(0, 0, 0, 0);
-    height: 7px;
-    width: 7px;
-    border-radius: 50px;
-    background: #ff5000;
-    cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -3px;
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #ff7113;
-}
-
-input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 1px;
-    cursor: pointer;
-    background: #ff7113;
-    border-radius: 14.1px;
-    border: 0px solid rgba(0, 1, 1, 0);
-}
-
-input[type=range]::-moz-range-thumb {
-    border: 0px solid rgba(0, 0, 0, 0);
-    height: 7px;
-    width: 7px;
-    border-radius: 50%;
-    background: #ff5000;
-    cursor: pointer;
 }
 
 input[type=range]::-ms-track {
-    width: 100%;
-    height: 1px;
+    width: 85%;
     cursor: pointer;
+
     background: transparent;
     border-color: transparent;
     color: transparent;
 }
 
-input[type=range]::-ms-fill-lower {
-    background: #ff7113;
-    border: 0px solid #ff5000;
-    border-radius: 28.2px;
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    background: #f50;
+    cursor: pointer;
+    margin-top: -3px;
+}
+
+input[type=range]::-moz-range-thumb {
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    background: #f50;
+    cursor: pointer;
 }
 
 input[type=range]::-ms-thumb {
-    border: 0px solid rgba(0, 0, 0, 0);
-    height: 7px;
-    width: 7px;
+    height: 8px;
+    width: 8px;
     border-radius: 50%;
-    background: #ff8600;
+    background: #f50;
     cursor: pointer;
-    height: 1px;
 }
 
-input[type=range]:focus::-ms-fill-lower {
-    background: #ff5000;
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 85%;
+    height: 2px;
+    cursor: pointer;
+    background: #ccc;
+    border-radius: 1.3px;
+}
+
+input[type=range]::-moz-range-track {
+    width: 85%;
+    height: 2px;
+    cursor: pointer;
+    background: #ccc;
+    border-radius: 1.3px;
+}
+
+input[type=range]::-ms-track {
+    width: 85%;
+    height: 2px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    border-width: 16px 0;
+    color: transparent;
+}
+
+input[type=range]::-ms-fill-lower {
+    background: #ccc;
+    border-radius: 2.6px;
+}
+
+input[type=range]::-ms-fill-upper {
+    background: #ccc;
+    border-radius: 2.6px;
 }
