--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -182,6 +182,10 @@ button:hover {
      background-color: #F1F2F1;
  }
 
+.un:hover {
+    cursor: no-drop;
+}
+
 //  @media only screen and (max-width: 1280px) {
 //      .main-box {
 //          display: flex;
